src/app/views/dashboard/snapshots/negative-account/negative-account-initial-pure/content.ts
export const noNegativeAccountInitialContent = {
  p1: `No new negative accounts in the last 30 days!`,
  p2: `To see older negative accounts, visit your credit report.`,
  b1: `View Full Report`,
  b2: `Return to Dashboard`,
};
